--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,7 @@ steps:
     SourceFolder: $(build.artifactstagingdirectory)
     contents: |
       azure-pipelines.yml
+      .gitattributes
     
 - task: PublishPipelineArtifact@1
   inputs:
